fixed issue with nav dropdown item's aligning. Issues: if it was used as button, alligning went on the side too much. If it was link with empty href, I got two active classes on different nav items. If it was link without href,so pointer was like "cursor:text"

--- a/MyHomeBlazorApp/Shared/NavMenu.razor.css
+++ b/MyHomeBlazorApp/Shared/NavMenu.razor.css
@@ -149,6 +149,11 @@
     color: #93b1c9;
 }
 
+.nav-item[b-ukfp6il4ai] .nav-link.btn {
+    text-align: left;
+    font-size: inherit;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
